Fixed menu sorting & image alignment

--- a/src/components/ColourSwatch/style.scss
+++ b/src/components/ColourSwatch/style.scss
@@ -4,11 +4,13 @@
     position: relative;
     display: inline-flex;
     width: 100%;
-    min-width: 18rem;
+    min-width: 16rem;
     align-items: center;
     gap: 1rem;
     border-radius: 0.5rem;
     margin-left: -1rem;
+    margin-right: 1rem;
+    margin-top: 1rem;
     padding: 0.5rem 1rem;
     cursor: pointer;
 
